--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     }
     function setRandomisation(progress) {
         if (progress == 0) {
-            let nums = Array.from({ length: 100 }, (_, i) => i + 1);
+            let nums = Array.from({ length: maxCount }, (_, i) => i + 1);
             order = nums.sort(() => Math.random() - 0.5);
             document.cookie = `order=${order}; expires=Thu, 31 Dec 2099 23:59:59 GMT; path=/`;
         }
@@ -301,7 +301,8 @@
             order = getOrder();
             imageCount = parseInt(getProgress());
 
-            console.log("CONTINUING PID: " + pid + " " + order + " " + order.length);
+            console.log("CONTINUING PID: " + pid + " " + order);
+            console.log("NUMBER OF IMAGES: " + order.length);
         }
         doGame();
     }
@@ -461,7 +462,7 @@
         emotionDiv.style.textAlign = 'center';
 
         const prompt = document.createElement('p');
-        prompt.innerHTML = '<strong>Select the emotion that best matches the facial expression:</strong>';
+        prompt.innerHTML = '<strong>Select the emotion that best matches the facial expression in the image above:</strong>';
         emotionDiv.appendChild(prompt);
 
         const form = document.createElement('form');
@@ -482,7 +483,7 @@
             label.setAttribute('for', emotionId);
             label.setAttribute('class', 'radio-label');
             label.style.display = 'inline-block';
-            label.style.margin = '0.3em';
+            //label.style.margin = '0.3em';
             label.style.cursor = 'pointer';
             label.textContent = emotion.charAt(0).toUpperCase() + emotion.slice(1);
 
@@ -601,7 +602,7 @@
 
     // Fetch titles and facts
     fetch('./titles.txt').then(res => res.text()).then(text => titles = text.trim().split('\n'));
-    fetch('./facts.txt').then(res => res.text()).then(text => facts = text.trim().split('\n'));
+    fetch('./facts_emotion.txt').then(res => res.text()).then(text => facts = text.trim().split('\n'));
 
     // Get IP address (optional)
     fetch('https://api.ipify.org?format=json')
